fix: name change

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ concurrency = multiprocessing
 command_line = -m pytest
 parallel = True
 source =
-    sfquery
+    sfbulkquery
 
 [darglint]
 docstring_style=google
@@ -60,5 +60,5 @@ deps =
   -Urrequirements-lint.txt
 parallel_show_output = True
 commands =
-    mypy --disallow-untyped-defs sfquery.py
-    flake8 sfquery.py
+    mypy --disallow-untyped-defs sfbulkquery.py
+    flake8 sfbulkquery.py
