100% test coverage, pytest-cov configured

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,7 @@
 concurrency = multiprocessing
 command_line = -m pytest
 parallel = True
-source =
-    sfbulkquery
+source = sfbulkquery
 
 [darglint]
 docstring_style=google
@@ -32,29 +31,34 @@ disallow_untyped_defs = False
 
 [tool:pytest]
 testpaths = tests
+addopts = --cov --cov-append --cov-report=term-missing --cov-config=setup.cfg
 
 [tox:tox]
-envlist = pypy3,py36,py37,py38,py39,coverage-report,lint
+envlist = coverage-clean,pypy3,py36,py37,py38,py39,coverage-report,lint
 
 [testenv]
 deps =
     -Urrequirements.txt
-commands =
-    coverage run
+commands = pytest
+depends =
+    {pypy3,py36,py37,py38,py39}: coverage-clean
+    coverage-report: pypy3,py36,py37,py38,py39
 
 [testenv:coverage-report]
-basepython = python3
 skip_install = true
 deps = coverage
-depends = pypy3,py36,py37,py38,py39
-parallel_show_output = True
 commands =
-    coverage combine
     coverage html
     coverage report
+    coverage erase
+parallel_show_output = True
+
+[testenv:coverage-clean]
+skip_install = true
+deps = coverage
+commands = coverage erase
 
 [testenv:lint]
-basepython = python3
 skip_install = true
 deps =
   -Urrequirements-lint.txt
