test: refactored tests for new session handling

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ disallow_untyped_defs = False
 
 [tool:pytest]
 testpaths = tests
-addopts = --cov --cov-append --cov-report=term-missing --cov-config=setup.cfg
+addopts = --vcr-record=none --cov --cov-append --cov-report=term-missing --cov-config=setup.cfg
 
 [tox:tox]
 envlist = coverage-clean,pypy3,py36,py37,py38,py39,coverage-report,lint
