test: more flexible fake session, better sanitization of org IDs

--- a/tests/cassettes/test_session_update_invalid.yaml
+++ b/tests/cassettes/test_session_update_invalid.yaml
@@ -25,10 +25,10 @@ interactions:
       Content-Type:
       - application/json;charset=UTF-8
       Date:
-      - Wed, 07 Apr 2021 09:54:52 GMT
+      - Thu, 08 Apr 2021 09:54:12 GMT
       Set-Cookie:
-      - BrowserId=TDmIKJeHEeuRL_dYMz7M4g; domain=.salesforce.com; path=/; expires=Thu,
-        07-Apr-2022 09:54:52 GMT; Max-Age=31536000
+      - BrowserId=Xuh0G5hQEeuRzlt4xa3zKg; domain=.salesforce.com; path=/; expires=Fri,
+        08-Apr-2022 09:54:12 GMT; Max-Age=31536000
       Strict-Transport-Security:
       - max-age=31536002; includeSubDomains
       Transfer-Encoding:
@@ -70,12 +70,12 @@ interactions:
       Content-Type:
       - application/json;charset=UTF-8
       Date:
-      - Wed, 07 Apr 2021 09:54:52 GMT
+      - Thu, 08 Apr 2021 09:54:12 GMT
       Set-Cookie:
-      - BrowserId=TFIZcZeHEeunrG12N3QhsA; domain=.salesforce.com; path=/; expires=Thu,
-        07-Apr-2022 09:54:52 GMT; Max-Age=31536000
+      - BrowserId=XwGhIJhQEeudY2tUCzKOOg; domain=.salesforce.com; path=/; expires=Fri,
+        08-Apr-2022 09:54:12 GMT; Max-Age=31536000
       Sforce-Limit-Info:
-      - api-usage=183/15000
+      - api-usage=16/15000
       Strict-Transport-Security:
       - max-age=31536002; includeSubDomains
       Transfer-Encoding:
@@ -109,8 +109,8 @@ interactions:
   response:
     body:
       string: '{"id":"https://login.salesforce.com/id/00D7f111111tgVeRBP/0054a101010TkPiJJB","asserted_user":true,"user_id":"0054a101010TkPiJJB","organization_id":"00D7f111111tgVeRBP","username":"sgreen@example.org","nick_name":"sgreen","display_name":"Sylvester
-        Green","email":"bowmanjd@gmail.com","email_verified":true,"first_name":"Sylvester","last_name":"Green","timezone":"America/New_York","photos":{"picture":"https://fake-dev-ed--c.documentforce.com/profilephoto/005/F","thumbnail":"https://fake-dev-ed--c.documentforce.com/profilephoto/005/T"},"addr_street":null,"addr_city":null,"addr_state":null,"addr_country":"US","addr_zip":null,"mobile_phone":"+1
-        5555551234","mobile_phone_verified":true,"is_lightning_login_user":false,"status":{"created_date":null,"body":null},"urls":{"enterprise":"https://fake-dev-ed.my.salesforce.com/services/Soap/c/{version}/00D6g000000swAq","metadata":"https://fake-dev-ed.my.salesforce.com/services/Soap/m/{version}/00D6g000000swAq","partner":"https://fake-dev-ed.my.salesforce.com/services/Soap/u/{version}/00D6g000000swAq","rest":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/","sobjects":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/sobjects/","search":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/search/","query":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/query/","recent":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/recent/","tooling_soap":"https://fake-dev-ed.my.salesforce.com/services/Soap/T/{version}/00D6g000000swAq","tooling_rest":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/tooling/","profile":"https://fake-dev-ed.my.salesforce.com/0054a101010TkPiJJB","feeds":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/feeds","groups":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/groups","users":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/users","feed_items":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/feed-items","feed_elements":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/feed-elements","custom_domain":"https://fake-dev-ed.my.salesforce.com"},"active":true,"user_type":"STANDARD","language":"en_US","locale":"en_US","utcOffset":-18000000,"last_modified_date":"2021-04-05T08:53:59Z"}'
+        Green","email":"sgreen@example.org","email_verified":true,"first_name":"Sylvester","last_name":"Green","timezone":"America/New_York","photos":{"picture":"https://fake-dev-ed--c.documentforce.com/profilephoto/005/F","thumbnail":"https://fake-dev-ed--c.documentforce.com/profilephoto/005/T"},"addr_street":null,"addr_city":null,"addr_state":null,"addr_country":"US","addr_zip":null,"mobile_phone":"+1
+        5555551234","mobile_phone_verified":true,"is_lightning_login_user":false,"status":{"created_date":null,"body":null},"urls":{"enterprise":"https://fake-dev-ed.my.salesforce.com/services/Soap/c/{version}/00D7f111111tgVe","metadata":"https://fake-dev-ed.my.salesforce.com/services/Soap/m/{version}/00D7f111111tgVe","partner":"https://fake-dev-ed.my.salesforce.com/services/Soap/u/{version}/00D7f111111tgVe","rest":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/","sobjects":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/sobjects/","search":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/search/","query":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/query/","recent":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/recent/","tooling_soap":"https://fake-dev-ed.my.salesforce.com/services/Soap/T/{version}/00D7f111111tgVe","tooling_rest":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/tooling/","profile":"https://fake-dev-ed.my.salesforce.com/0054a101010TkPiJJB","feeds":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/feeds","groups":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/groups","users":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/users","feed_items":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/feed-items","feed_elements":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/feed-elements","custom_domain":"https://fake-dev-ed.my.salesforce.com"},"active":true,"user_type":"STANDARD","language":"en_US","locale":"en_US","utcOffset":-18000000,"last_modified_date":"2021-04-05T08:53:59Z"}'
     headers:
       Cache-Control:
       - no-cache,must-revalidate,max-age=0,no-store,private
@@ -119,10 +119,10 @@ interactions:
       Content-Type:
       - application/json;charset=UTF-8
       Date:
-      - Wed, 07 Apr 2021 09:54:52 GMT
+      - Thu, 08 Apr 2021 09:54:12 GMT
       Set-Cookie:
-      - BrowserId=TKaiCpeHEeuoz2vGkuJzFw; domain=.salesforce.com; path=/; expires=Thu,
-        07-Apr-2022 09:54:52 GMT; Max-Age=31536000
+      - BrowserId=Xx_XyphQEeuVqIVBDOqx8Q; domain=.salesforce.com; path=/; expires=Fri,
+        08-Apr-2022 09:54:12 GMT; Max-Age=31536000
       Strict-Transport-Security:
       - max-age=31536000; includeSubDomains
       Transfer-Encoding:
@@ -155,8 +155,7 @@ interactions:
     uri: https://fake-dev-ed.my.salesforce.com/services/data/v51.0/sobjects/Organization/00D7f111111tgVeRBP?fields=Name%2CInstanceName%2CTimeZoneSidKey%2COrganizationType%2CIsSandbox%2CLanguageLocaleKey
   response:
     body:
-      string: '{"attributes":{"type":"Organization","url":"/services/data/v51.0/sobjects/Organization/00D7f111111tgVeRBP"},"Name":"Green
-        Solutions","InstanceName":"NA174","TimeZoneSidKey":"America/Los_Angeles","OrganizationType":"Developer
+      string: '{"attributes":{"type":"Organization","url":"/services/data/v51.0/sobjects/Organization/00D7f111111tgVeRBP"},"Name":"Green Endeavors","InstanceName":"NA174","TimeZoneSidKey":"America/Los_Angeles","OrganizationType":"Developer
         Edition","IsSandbox":false,"LanguageLocaleKey":"en_US","Id":"00D7f111111tgVeRBP"}'
     headers:
       Cache-Control:
@@ -166,12 +165,12 @@ interactions:
       Content-Type:
       - application/json;charset=UTF-8
       Date:
-      - Wed, 07 Apr 2021 09:54:52 GMT
+      - Thu, 08 Apr 2021 09:54:12 GMT
       Set-Cookie:
-      - BrowserId=TM08epeHEeuVmzViS9WQ8Q; domain=.salesforce.com; path=/; expires=Thu,
-        07-Apr-2022 09:54:52 GMT; Max-Age=31536000
+      - BrowserId=XznI5phQEeuOOSvPJEK0HA; domain=.salesforce.com; path=/; expires=Fri,
+        08-Apr-2022 09:54:12 GMT; Max-Age=31536000
       Sforce-Limit-Info:
-      - api-usage=183/15000
+      - api-usage=16/15000
       Strict-Transport-Security:
       - max-age=31536002; includeSubDomains
       Transfer-Encoding:
@@ -213,12 +212,12 @@ interactions:
       Content-Type:
       - application/json;charset=UTF-8
       Date:
-      - Wed, 07 Apr 2021 09:54:53 GMT
+      - Thu, 08 Apr 2021 09:54:12 GMT
       Set-Cookie:
-      - BrowserId=TOvBbpeHEeunrG12N3QhsA; domain=.salesforce.com; path=/; expires=Thu,
-        07-Apr-2022 09:54:53 GMT; Max-Age=31536000
+      - BrowserId=X2HqYphQEeukC8kFb4ToRA; domain=.salesforce.com; path=/; expires=Fri,
+        08-Apr-2022 09:54:12 GMT; Max-Age=31536000
       Sforce-Limit-Info:
-      - api-usage=184/15000
+      - api-usage=16/15000
       Strict-Transport-Security:
       - max-age=31536002; includeSubDomains
       Transfer-Encoding:
