--- a/tests/cassettes/test_session_update.yaml
+++ b/tests/cassettes/test_session_update.yaml
@@ -54,10 +54,10 @@ interactions:
       Content-Type:
       - application/json;charset=UTF-8
       Date:
-      - Wed, 07 Apr 2021 09:54:50 GMT
+      - Thu, 08 Apr 2021 09:54:11 GMT
       Set-Cookie:
-      - BrowserId=S3lskpeHEeurSzuQ5ienHA; domain=.salesforce.com; path=/; expires=Thu,
-        07-Apr-2022 09:54:50 GMT; Max-Age=31536000
+      - BrowserId=XnD6RZhQEeuKZN9B1cleEQ; domain=.salesforce.com; path=/; expires=Fri,
+        08-Apr-2022 09:54:11 GMT; Max-Age=31536000
       Strict-Transport-Security:
       - max-age=31536002; includeSubDomains
       Transfer-Encoding:
@@ -99,12 +99,12 @@ interactions:
       Content-Type:
       - application/json;charset=UTF-8
       Date:
-      - Wed, 07 Apr 2021 09:54:50 GMT
+      - Thu, 08 Apr 2021 09:54:11 GMT
       Set-Cookie:
-      - BrowserId=S5a45JeHEeuZ6_mzp25D6w; domain=.salesforce.com; path=/; expires=Thu,
-        07-Apr-2022 09:54:50 GMT; Max-Age=31536000
+      - BrowserId=XooAwZhQEeubMY8f86FbJg; domain=.salesforce.com; path=/; expires=Fri,
+        08-Apr-2022 09:54:11 GMT; Max-Age=31536000
       Sforce-Limit-Info:
-      - api-usage=183/15000
+      - api-usage=16/15000
       Strict-Transport-Security:
       - max-age=31536002; includeSubDomains
       Transfer-Encoding:
@@ -138,8 +138,8 @@ interactions:
   response:
     body:
       string: '{"id":"https://login.salesforce.com/id/00D7f111111tgVeRBP/0054a101010TkPiJJB","asserted_user":true,"user_id":"0054a101010TkPiJJB","organization_id":"00D7f111111tgVeRBP","username":"sgreen@example.org","nick_name":"sgreen","display_name":"Sylvester
-        Green","email":"bowmanjd@gmail.com","email_verified":true,"first_name":"Sylvester","last_name":"Green","timezone":"America/New_York","photos":{"picture":"https://fake-dev-ed--c.documentforce.com/profilephoto/005/F","thumbnail":"https://fake-dev-ed--c.documentforce.com/profilephoto/005/T"},"addr_street":null,"addr_city":null,"addr_state":null,"addr_country":"US","addr_zip":null,"mobile_phone":"+1
-        5555551234","mobile_phone_verified":true,"is_lightning_login_user":false,"status":{"created_date":null,"body":null},"urls":{"enterprise":"https://fake-dev-ed.my.salesforce.com/services/Soap/c/{version}/00D6g000000swAq","metadata":"https://fake-dev-ed.my.salesforce.com/services/Soap/m/{version}/00D6g000000swAq","partner":"https://fake-dev-ed.my.salesforce.com/services/Soap/u/{version}/00D6g000000swAq","rest":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/","sobjects":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/sobjects/","search":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/search/","query":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/query/","recent":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/recent/","tooling_soap":"https://fake-dev-ed.my.salesforce.com/services/Soap/T/{version}/00D6g000000swAq","tooling_rest":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/tooling/","profile":"https://fake-dev-ed.my.salesforce.com/0054a101010TkPiJJB","feeds":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/feeds","groups":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/groups","users":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/users","feed_items":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/feed-items","feed_elements":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/feed-elements","custom_domain":"https://fake-dev-ed.my.salesforce.com"},"active":true,"user_type":"STANDARD","language":"en_US","locale":"en_US","utcOffset":-18000000,"last_modified_date":"2021-04-05T08:53:59Z"}'
+        Green","email":"sgreen@example.org","email_verified":true,"first_name":"Sylvester","last_name":"Green","timezone":"America/New_York","photos":{"picture":"https://fake-dev-ed--c.documentforce.com/profilephoto/005/F","thumbnail":"https://fake-dev-ed--c.documentforce.com/profilephoto/005/T"},"addr_street":null,"addr_city":null,"addr_state":null,"addr_country":"US","addr_zip":null,"mobile_phone":"+1
+        5555551234","mobile_phone_verified":true,"is_lightning_login_user":false,"status":{"created_date":null,"body":null},"urls":{"enterprise":"https://fake-dev-ed.my.salesforce.com/services/Soap/c/{version}/00D7f111111tgVe","metadata":"https://fake-dev-ed.my.salesforce.com/services/Soap/m/{version}/00D7f111111tgVe","partner":"https://fake-dev-ed.my.salesforce.com/services/Soap/u/{version}/00D7f111111tgVe","rest":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/","sobjects":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/sobjects/","search":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/search/","query":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/query/","recent":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/recent/","tooling_soap":"https://fake-dev-ed.my.salesforce.com/services/Soap/T/{version}/00D7f111111tgVe","tooling_rest":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/tooling/","profile":"https://fake-dev-ed.my.salesforce.com/0054a101010TkPiJJB","feeds":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/feeds","groups":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/groups","users":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/users","feed_items":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/feed-items","feed_elements":"https://fake-dev-ed.my.salesforce.com/services/data/v{version}/chatter/feed-elements","custom_domain":"https://fake-dev-ed.my.salesforce.com"},"active":true,"user_type":"STANDARD","language":"en_US","locale":"en_US","utcOffset":-18000000,"last_modified_date":"2021-04-05T08:53:59Z"}'
     headers:
       Cache-Control:
       - no-cache,must-revalidate,max-age=0,no-store,private
@@ -148,10 +148,10 @@ interactions:
       Content-Type:
       - application/json;charset=UTF-8
       Date:
-      - Wed, 07 Apr 2021 09:54:51 GMT
+      - Thu, 08 Apr 2021 09:54:11 GMT
       Set-Cookie:
-      - BrowserId=S_TeppeHEeuLq__EECZ0Jg; domain=.salesforce.com; path=/; expires=Thu,
-        07-Apr-2022 09:54:51 GMT; Max-Age=31536000
+      - BrowserId=Xqvf5phQEeuBxHMxF4xyPw; domain=.salesforce.com; path=/; expires=Fri,
+        08-Apr-2022 09:54:11 GMT; Max-Age=31536000
       Strict-Transport-Security:
       - max-age=31536000; includeSubDomains
       Transfer-Encoding:
@@ -184,8 +184,7 @@ interactions:
     uri: https://fake-dev-ed.my.salesforce.com/services/data/v51.0/sobjects/Organization/00D7f111111tgVeRBP?fields=Name%2CInstanceName%2CTimeZoneSidKey%2COrganizationType%2CIsSandbox%2CLanguageLocaleKey
   response:
     body:
-      string: '{"attributes":{"type":"Organization","url":"/services/data/v51.0/sobjects/Organization/00D7f111111tgVeRBP"},"Name":"Green
-        Solutions","InstanceName":"NA174","TimeZoneSidKey":"America/Los_Angeles","OrganizationType":"Developer
+      string: '{"attributes":{"type":"Organization","url":"/services/data/v51.0/sobjects/Organization/00D7f111111tgVeRBP"},"Name":"Green Endeavors","InstanceName":"NA174","TimeZoneSidKey":"America/Los_Angeles","OrganizationType":"Developer
         Edition","IsSandbox":false,"LanguageLocaleKey":"en_US","Id":"00D7f111111tgVeRBP"}'
     headers:
       Cache-Control:
@@ -195,12 +194,12 @@ interactions:
       Content-Type:
       - application/json;charset=UTF-8
       Date:
-      - Wed, 07 Apr 2021 09:54:51 GMT
+      - Thu, 08 Apr 2021 09:54:11 GMT
       Set-Cookie:
-      - BrowserId=TBqOTpeHEeuHIll8JrsCgg; domain=.salesforce.com; path=/; expires=Thu,
-        07-Apr-2022 09:54:51 GMT; Max-Age=31536000
+      - BrowserId=XsoW6JhQEeuap21DW3ZWQw; domain=.salesforce.com; path=/; expires=Fri,
+        08-Apr-2022 09:54:12 GMT; Max-Age=31536000
       Sforce-Limit-Info:
-      - api-usage=183/15000
+      - api-usage=16/15000
       Strict-Transport-Security:
       - max-age=31536002; includeSubDomains
       Transfer-Encoding:
