--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 concurrency = multiprocessing
 command_line = -m pytest
 parallel = True
-source = sfbulkquery
+source = sfbulk
 
 [darglint]
 docstring_style=google
@@ -64,5 +64,5 @@ deps =
   -Urrequirements-lint.txt
 parallel_show_output = True
 commands =
-    mypy --disallow-untyped-defs sfbulkquery.py
-    flake8 sfbulkquery.py
+    mypy --disallow-untyped-defs sfbulk.py
+    flake8 sfbulk.py
